--- a/config/locales/translation_en.yml
+++ b/config/locales/translation_en.yml
@@ -192,6 +192,8 @@ en:
       realize_type: Realize type
       copy_request: Copy request
       exchange_manifestation: Exchenge manifestation exemplified
+      relationship_family: Relationship family
+
     attributes:
       enju_terminal:
         ipaddr: IP Address
@@ -1470,6 +1472,11 @@ en:
         user: User
         body: Body
         created_at: Accept date
+      relationship_family:
+        display_name: Display name
+        description: Description
+        note: Note
+
   page:
     user_title: Welcome %{login_name}
     sign_in: Sign in
@@ -1694,6 +1701,7 @@ en:
     wait: Wait..
     extensions: Extensions
     add_child: Add a child
+    relationship: Relationship
     access_logs: Access logs
     search_results: Search results (Book)
     search_article_results: Search results (Paper)
